[package]
name = "padlock"
version = "0.2.0"
authors = ["Edwin Svensson <padlock@olback.net>"]
edition = "2018"
description = "Safely acquire RwLock/Mutex locks."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/olback/padlock-rs"
repository = "https://github.com/olback/padlock-rs"
readme = "README.md"
keywords = [ "mutex", "rwlock", "lock" ]

[badges]
circle-ci = { repository = "olback/padlock-rs", branch = "master" }

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
